add Spring Security, JWT-based authentication, Swagger UI